Fixed the headers smaller with whitespace, and changed footer logo

--- a/react-bootstrap/src/components/Classroom.css
+++ b/react-bootstrap/src/components/Classroom.css
@@ -28,6 +28,3 @@
     font-weight: bolder;  
     color: rgba(103, 168, 255, 1);
   }
-  .header{
-    
-  }
